--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -1,71 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <title>Disasters</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
-        integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous" />
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+        crossorigin="anonymous"></script>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
 <body>
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="/">Disaster Response Project</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                    <li><a href="https://github.com/">Contact</a></li>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Disaster Response Project</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/sbadillo">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
-
-    <div class="jumbotron">
+    <div class="p-4">
         <div class="container">
-            <h1 class="text-center">Disaster Response Project</h1>
+            <h1 class="text-center p-2">Disaster Response Project</h1>
             <p class="text-center">Analyzing message data for disaster response</p>
-            <hr />
 
             <div class="row">
-                <div class="col-lg-12 form-group-lg">
+                <div class="col-md-8 mx-auto">
                     <form action="/go" method="get">
-                        <input type="text" class="form-control form-control-lg" name="query"
-                            placeholder="Enter a message to classify">
-                        <div class="col-lg-offset-5">
-                            <button type="submit" class="btn btn-lg btn-success">Classify Message</button>
+                        <div class="input-group mb-3">
+                            <input type="text" class="form-control" placeholder="Enter a message to classify"
+                                aria-label="Enter a message to classify" aria-describedby="button-addon2" name="query">
+                            <button class="btn btn-outline-success" type="submit" id="button-addon2">Classify
+                                Message</button>
                         </div>
                     </form>
                 </div>
             </div>
 
-            {% block message %}
-            {% endblock %}
+
+
+            {% block message %} {% endblock %}
         </div>
     </div>
 
     <div class="container">
         {% block content %}
         <div class="page-header">
-            <h1 class="text-center">Overview of Training Dataset</h1>
+            <h3 class="text-center">Overview of Training Dataset</h3>
         </div>
         {% endblock %}
 
         {% for id in ids %}
-        <div id="{{id}}"></div>
+        <div class="row mb-5">
+            <div id="{{id}}" class="col-md-8 mx-auto"></div>
+        </div>
         {% endfor %}
+
+
+        <footer class="page-footer mt-5">
+            <p class="text-center mt-5">sb</p>
+        </footer>
     </div>
 
     <script type="text/javascript">
@@ -75,7 +87,6 @@
             Plotly.plot(ids[i], graphs[i].data, graphs[i].layout);
         }
     </script>
-
 </body>
 
 </html>
