trained model, fixed web results

--- a/app/templates/go.html
+++ b/app/templates/go.html
@@ -14,7 +14,7 @@
     {% if classification == 1 %}
     <li class="list-group-item list-group-item-success text-center">{{category.replace('_', ' ').title()}}</li>
     {% else %}
-    <li class="list-group-item list-group-item-secondary text-center">{{category.replace('_', ' ').title()}}</li>
+    <li class="list-group-item list-group-item text-center">{{category.replace('_', ' ').title()}}</li>
     {% endif %}
     {% endfor %}
 
